fix(#52): 리뷰 피드백 반영 - 코드 개선
- Stream API의 toList() 메서드 사용으로 코드 간결화
- StringBuilder 대신 Stream API와 Collectors.joining 사용하여 ORDER BY 절 생성 로직 개선
- Java 16+ 기능 활용으로 불변 리스트 반환 및 안정성 향상

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>